--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.34",
     "@types/react": "^18.2.8",
+    "@types/react-datepicker": "^4.11.2",
     "@types/react-dom": "^18.2.4",
     "@types/react-router-dom": "^5.3.3",
     "react": "^18.2.0",
+    "react-datepicker": "^4.13.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
     "react-router-dom": "^6.12.1",
