--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-datepicker": "^4.11.2",
     "@types/react-dom": "^18.2.4",
     "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-datepicker": "^4.13.0",
     "react-dom": "^18.2.0",
