--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
+    "msw": "^1.2.2",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2"
   }
