いい感じの処理にしてテストを通した(クソコード） #78

--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "work-time-management-app",
   "version": "0.1.0",
   "private": true,
+  "jest": {
+    "transformIgnorePatterns": ["node_modules/(?!axios)/"]
+  },
   "dependencies": {
     "@hookform/resolvers": "^3.1.1",
     "@testing-library/jest-dom": "^5.16.5",
