--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@types/react-datepicker": "^4.11.2",
     "@types/react-dom": "^18.2.4",
     "@types/react-router-dom": "^5.3.3",
+    "@types/sockjs-client": "^1.5.1",
+    "@types/stompjs": "^2.3.5",
     "axios": "^1.4.0",
     "net": "^1.0.2",
     "react": "^18.2.0",
