--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@types/react-dom": "^18.2.4",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.4.0",
+    "flowbite": "^1.8.1",
+    "flowbite-react": "^0.5.0",
     "react": "^18.2.0",
     "react-datepicker": "^4.13.0",
     "react-dom": "^18.2.0",
