--- a/.github/workflows/jest.yml
+++ b/.github/workflows/jest.yml
@@ -11,7 +11,7 @@ jobs:
         with:
           node-version: "18.17.1"
       - name: Install packages
-        run: npm Install
+        run: npm install
       - name: Show coverage
         run: npm test -- --bail --maxWorkers=100% --watchAll=false --coverage
 
