--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -33,6 +33,8 @@ jobs:
     needs: test
     runs-on: ubuntu-latest
     steps:
+    - name: Checkout
+      uses: actions/checkout@v3
     - name: Build
       env:
           REACT_APP_API_BASE_URL: ${{ secrets.REACT_APP_PRODUCTION_API_BASE_URL }}
@@ -43,6 +45,8 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
+    - name: Checkout
+      uses: actions/checkout@v3
     - name: Configure AWS credentials with IAM Role
       uses: aws-actions/configure-aws-credentials@main
       with:
