--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -29,24 +29,24 @@ jobs:
       env:
         REACT_APP_API_BASE_URL: ${{ secrets.REACT_APP_API_BASE_URL }}
       run: npm test -- --bail --maxWorkers=100% --watchAll=false --coverage
-  build:
+  build_deploy:
     needs: test
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
       uses: actions/checkout@v3
+    - name: Install Nodejs
+      uses: actions/setup-node@v3
+      with:
+        node-version: "18.17.1"
+    - name: Install packages
+      run: npm install
     - name: Build
       env:
           REACT_APP_API_BASE_URL: ${{ secrets.REACT_APP_PRODUCTION_API_BASE_URL }}
           # todo とりあえず動くので下記でbuild時に発生するエラーを回避（後々コードを修正）
           CI: false
       run: npm run build
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v3
     - name: Configure AWS credentials with IAM Role
       uses: aws-actions/configure-aws-credentials@main
       with:
